# ogenti

./: .gitignore  README.md  pyproject.toml  search.py
docs/: A100-GUIDE.md  RUNPOD-5090-GUIDE.md  이게뭐임.md
docs/rfcs/: RFC-0001-beyond-dit.md  RFC-0002-base-backbone-selection.md  RFC-0003-skin-and-motion-realism.md  RFC-0004-ai-tell-taxonomy.md  RFC-0005-physics-engine-integration.md  RFC-0006-promoting-a14b.md
ogenti/: __init__.py  cli.py
ogenti/configs/model/: ogenti_5b.yaml  ogenti_5b_5090.yaml  ogenti_a14b.yaml
ogenti/configs/training/: accelerate_zero2.yaml  accelerate_zero3.yaml  full_curriculum_a14b.yaml  retrofit_stage1.yaml  retrofit_stage1_a14b.yaml  retrofit_stage4_realism.yaml  retrofit_stage5_physics.yaml  smoke_5090.yaml  smoke_a100.yaml
ogenti/data/loaders/: video_dataset.py
ogenti/data/preprocess/: __init__.py  camera_motion.py  glyph_regions.py  keypoints.py  micro_events.py  skin_masks.py  subject_motion.py
ogenti/inference/: moe_wrapper.py
ogenti/inference/pipelines/: ogenti_pipeline.py
ogenti/inference/samplers/: flow_euler.py
ogenti/models/: ogenti_transformer.py
ogenti/models/backbones/: wan22_wrapper.py
ogenti/models/blocks/: ogenti_block.py
ogenti/modules/attention/: gated_cross_attn.py  multihead.py  rope.py
ogenti/modules/conditioning/: camera_motion.py  micro_events.py  physics_keyframes.py  subject_motion.py  timestep.py
ogenti/modules/glyph/: glyph_branch.py
ogenti/modules/identity/: entity_tokens.py
ogenti/modules/postprocess/: film_grain.py  lens_artifacts.py  motion_blur.py
ogenti/modules/texture/: material_detail_head.py  skin_detail_head.py
ogenti/modules/tokenizers/: patch_embed.py
ogenti/physics/: scene.py  scene_parser.py  simulator.py  trajectories.py
ogenti/retrofit/adapters/: dit_to_ogenti.py
ogenti/retrofit/surgery/: wan22_import.py
ogenti/training/losses/: anatomy.py  diffusion.py  frequency.py  identity.py  motion_realism.py  ocr.py  physics.py  physics_keyframe.py  temporal_realism.py  trajectory_tracker.py
ogenti/training/schedulers/: flow_matching.py
ogenti/utils/: checkpoint.py  logging.py
runs/2026-05-23_1207/: README.md
runs/2026-05-23_1207/.runtime/: 01_keymap_report.json  01b_keymap_report.json  (+5 more)
scripts/data/: build_dataset.py  presim_manifest.py
scripts/eval/: generate_samples.py
scripts/retrofit/: import_wan22.py  validate_keymap.py
scripts/train/: run_curriculum.py  train.py
studio/: .env.example  .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
studio/prisma/: schema.prisma
studio/scripts/: setup-stripe.ts
tests/integration/: test_retrofit_invariant.py
tests/unit/: test_a14b_moe_wrapper.py  test_ogenti_block.py  test_physics_engine.py  test_realism_modules.py  test_wan22_import_a14b.py
(+184 files in other folders)
